--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@mysql/xdevapi": "8.0.22",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
@@ -28,6 +29,7 @@
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "file-system": "^2.2.2",
+    "mysql": "^2.18.1",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pg": "^7.12.1",
