--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "react": "webpack -p --watch --progress ",
-    "server": "nodemon ./server/index.js"
+    "server": "node ./server/index.js",
+    "load-db": "node ./database/index.js init"
   },
   "babel": {
     "presets": [
