--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "react": "webpack -p --watch --progress ",
     "server": "nodemon ./server/index.js",
-    "load-db": "node ./database/index.js init"
+    "load-db": "node ./database/index.js init",
+    "clear-db-tables": "node ./database/index.js table-clear"
   },
   "babel": {
     "presets": [
